--- a/style.css
+++ b/style.css
@@ -89,21 +89,65 @@
   transition: 0.3s;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1024px) and (max-width: 1200px) {
+  .header_bottom_right_img {
+    width: 450px;
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1023px) {
   .header {
-    padding-left: 4%;
-    padding-right: 4%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .header_bottom_right_img {
+    width: 400px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 899px) {
+  .header {
+    padding-left: 5%;
+    padding-right: 5%;
   }
   .header_bottom_right_img {
     position: absolute;
     width: 393.65px;
     height: 333.18px;
     left: 358.22px;
-    top: 366.27px;
+    top: 300.27px;
+  }
+  .header_bottom {
+    margin-top: 60px;
   }
 }
 
-@media (max-width: 376px) {
+@media (min-width: 425px) and (max-width: 767px) {
+  .header {
+    height: 605px;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .header_bottom_right_img {
+    display: none;
+  }
+  .header_bottom_left_h1 {
+    text-align: center;
+    font-size: 50px;
+  }
+  .header_bottom {
+    margin-top: 45px;
+  }
+  .header_bottom_left_p {
+    width: 100%;
+    text-align: center;
+  }
+  .header_bottom_button {
+    margin: 30px auto;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 424px) {
   .header {
     background: -webkit-gradient(linear, left bottom, left top, color-stop(8.84%, #DAEAF7), color-stop(31.12%, rgba(152, 195, 232, 0)));
     background: linear-gradient(0deg, #DAEAF7 8.84%, rgba(152, 195, 232, 0) 31.12%);
@@ -149,6 +193,65 @@
   }
   .text_p {
     width: 343px;
+    height: 96px;
+    text-align: center;
+    margin-top: 12px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 374px) {
+  .header {
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(8.84%, #DAEAF7), color-stop(31.12%, rgba(152, 195, 232, 0)));
+    background: linear-gradient(0deg, #DAEAF7 8.84%, rgba(152, 195, 232, 0) 31.12%);
+    height: 376px;
+    padding-left: 4%;
+    padding-right: 4%;
+  }
+  .header_circle_1, .header_circle_2 {
+    width: 22px;
+    height: 22px;
+  }
+  .header_img_login {
+    width: 25px;
+  }
+  .header_top {
+    padding-top: 20px;
+  }
+  .header_bottom {
+    margin-top: 36px;
+  }
+  .header_bottom_right_img {
+    display: none;
+  }
+  .header_bottom_left_h1 {
+    width: 285px;
+    height: 76px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 29px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: #1F3F68;
+  }
+  .header_bottom_button {
+    width: 108px;
+    height: 27px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 26px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 2px;
+    text-align: center;
+    margin-top: 50px;
+    color: #FFFFFF;
+  }
+  .text_p {
+    width: 285px;
     height: 96px;
     text-align: center;
     margin-top: 12px;
