--- a/_help.scss
+++ b/_help.scss
@@ -84,12 +84,34 @@
         }
     }
 }
+@media(min-width:1024px)and(max-width:1300px){
+    .help{
+        padding-left: 5%;
+        padding-right: 5%;
+        &_block{
+            width: 300px;
+        }
+        &_block_h3{
+            margin-top: 35px;
+            font-size: 18px;
+            line-height: 26px;
+        }
+        &_block_p{
+            font-size: 15px;
+            line-height: 23px;
+        }
+    }
+}
 
-@media (max-width: 768px) {
+@media (min-width: 768px)and(max-width:1023px) {
     .help {
+        padding-left: 5%;
+        padding-right: 5%;
         &_block {
-            width: 334.97px;
+            margin: 20px auto;
+            width:400px;
             height: 448px;
+            
 
             &_p {
                 margin-bottom: 23px;
@@ -103,33 +125,79 @@
 
         &_descr {
             flex-direction: column;
-            margin-left: 160px;
+            justify-content: space-between;
+            // margin-left: 160px;
         }
 
     }
 }
-
-@media (max-width: 376px) {
+@media (min-width: 425px)and(max-width:767px) {
     .help {
         padding-left: 5%;
         padding-right: 5%;
+        &_block {
+            margin: 20px auto;
+            width:375px;
+            height: 448px;
+            
 
-        &_h2 {
-            font-style: normal;
-            font-weight: 300;
-            font-size: 24px;
-            line-height: 28px;
-            margin-top: 48px;
+            &_p {
+                margin-bottom: 23px;
+            }
+
+            &_h3 {
+                margin-bottom: 10px;
+                margin-top: 40px;
+            }
         }
 
         &_descr {
-            margin-left: 5px;
+            flex-direction: column;
+            justify-content: space-between;
+            // margin-left: 160px;
         }
 
-        &_block {
-            width: 334px;
-            height: 448px;
-
-        }
     }
 }
+@media (min-width: 320px)and(max-width:424px) {
+    .help {
+        padding-left: 5%;
+        padding-right: 5%;
+        &_block_img{
+            width: 120px;
+        }
+        &_h2{
+            font-size: 24px;
+            line-height: 35px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+        &_block {
+            margin: 20px auto;
+            width:280px;
+            height: 448px;
+            
+
+            &_p {
+                font-size: 14px;
+                line-height: 22px;
+                margin-bottom: 7px;
+            }
+
+            &_h3 {
+                font-size: 18px;
+    line-height: 26px;
+                margin-bottom: 10px;
+                margin-top: 40px;
+            }
+        }
+
+        &_descr {
+            flex-direction: column;
+            justify-content: space-between;
+            // margin-left: 160px;
+        }
+
+    }
+}
+
