--- a/_project.scss
+++ b/_project.scss
@@ -34,6 +34,7 @@
             margin-bottom: 32px;
             background-image: url(img/project/background-top-2.png), url(img/project/background-top.png);
             background-size: cover;
+            // background-size: contain;
             background-repeat: no-repeat;
             border-radius: 8px;
 
@@ -50,11 +51,12 @@
 
         &_bottom {
             display: flex;
+            justify-content: space-between;
 
             &_left {
                 height: 417px;
                 width: 554px;
-                margin-right: 25px;
+                // margin-right: 25px;
                 background-image: url(img/project/background-bottom.png), url(img/project/background-bottom-1.png);
                 background-size: cover;
                 background-repeat: no-repeat;
@@ -86,20 +88,85 @@
 
 }
 
-@media (max-width: 768px) {
+@media(min-width:1200px)and(max-width:1320px) {
+    .project {
+        padding-left: 5%;
+        padding-right: 5%;
+
+        &_block_bottom_right,
+        &_block_bottom_left {
+            width: 510px;
+        }
+    }
+}
+
+@media(min-width:1024px)and(max-width:1199px) {
+    .project {
+        padding-left: 5%;
+        padding-right: 5%;
+
+        &_block_bottom_right,
+        &_block_bottom_left {
+            width: 450px;
+            background-size: cover;
+            background-position: center;
+        }
+    }
+}
+
+@media(min-width:900px)and(max-width:1023px) {
+    .project {
+        padding-left: 5%;
+        padding-right: 5%;
+
+        &_h2 {
+            font-size: 33px;
+            line-height: 40px;
+        }
+
+        &_p {
+            font-size: 14px;
+            line-height: 20px;
+            margin-bottom: 35px;
+            width: 700px;
+        }
+
+        &_block_top_p {
+            margin-top: 10%;
+            margin-left: 44%;
+            font-size: 28px;
+        }
+
+        &_block_bottom_left,
+        &_block_bottom_right {
+            width: 400px;
+            height: 390px;
+            background-size: cover;
+            background-position: center;
+        }
+    }
+}
+
+@media (min-width: 768px)and(max-width:899px) {
     .center {
         padding-left: 5%;
-        padding-right: 0%;
+        padding-right: 3%;
     }
 
     .project {
+        margin-bottom: 30px;
+
+        &_h2 {
+            margin-top: 30px;
+        }
+
         &_p {
             width: 520px;
         }
 
         &_block {
             &_top {
-                width: 704px;
+
                 height: 296px;
 
                 &_p {
@@ -114,7 +181,7 @@
 
             &_bottom {
                 &_left {
-                    margin-right: 32px;
+                    // margin-right: 32px;
                 }
 
                 &_left,
@@ -128,9 +195,17 @@
     }
 }
 
-@media (max-width: 376px) {
+@media (min-width:425px)and (max-width: 767px) {
+    .center {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
     .project {
+
         &_h2 {
+            margin-top: 30px;
+            margin-bottom: 15px;
             font-weight: 300;
             font-size: 24px;
             line-height: 28px;
@@ -143,6 +218,7 @@
             line-height: 26px;
             margin-bottom: 82px;
             width: 343px;
+            margin-bottom: 40px;
         }
 
         &_block {
@@ -150,7 +226,80 @@
             height: 144px;
 
             &_top {
-                width: 343px;
+                width: auto;
+                height: 144px;
+                margin-bottom: 16px;
+
+                &_img {
+                    width: 150px;
+                    height: 145px;
+                }
+
+                &_p {
+                    font-size: 14px;
+                    line-height: 16px;
+                    margin-left: 181px;
+                    margin-top: 40px;
+                }
+            }
+
+            &_bottom {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 64px;
+
+                &_left {
+                    margin-bottom: 16px;
+                }
+
+                &_left,
+                &_right {
+                    width: auto;
+                    height: 255px;
+
+                    &_p {
+                        font-size: 16px;
+                        line-height: 19px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:375px)and (max-width: 424px) {
+    .center {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .project {
+        margin-bottom: 30px;
+
+        &_h2 {
+            margin-top: 30px;
+            margin-bottom: 14px;
+            font-weight: 300;
+            font-size: 24px;
+            line-height: 28px;
+            text-align: center;
+            color: #000000;
+        }
+
+        &_p {
+            font-size: 14px;
+            line-height: 26px;
+            margin-bottom: 82px;
+            width: 343px;
+            margin-bottom: 40px;
+        }
+
+        &_block {
+            width: 343px;
+            height: 144px;
+
+            &_top {
+                width: auto;
                 height: 144px;
                 margin-bottom: 16px;
 
@@ -162,7 +311,8 @@
                 &_p {
                     font-size: 16px;
                     line-height: 19px;
-                    margin-left: 136px;
+                    margin-left: 200px;
+                    margin-top: 50px;
                 }
             }
 
@@ -170,13 +320,88 @@
                 display: flex;
                 flex-direction: column;
                 margin-bottom: 64px;
-&_left{
-    margin-bottom: 16px;
-}
+
+                &_left {
+                    margin-bottom: 16px;
+                }
+
                 &_left,
                 &_right {
-                    width: 343px;
+                    width: auto;
                     height: 255px;
+
+                    &_p {
+                        font-size: 16px;
+                        line-height: 19px;
+                    }
+                }
+            }
+        }
+    }
+}
+@media (min-width:320px)and (max-width: 374px) {
+    .center {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+
+    .project {
+        margin-bottom: 30px;
+
+        &_h2 {
+            margin-top: 30px;
+            margin-bottom: 14px;
+            font-weight: 300;
+            font-size: 24px;
+            line-height: 28px;
+            text-align: center;
+            color: #000000;
+        }
+
+        &_p {
+            font-size: 13px;
+            line-height: 22px;
+            margin-bottom: 82px;
+            width: 265px;
+            margin-bottom: 40px;
+        }
+
+        &_block {
+            width: 343px;
+            height: 144px;
+
+            &_top {
+                width: auto;
+                height: 144px;
+                margin-bottom: 16px;
+
+                &_img {
+                    width: 150px;
+                    height: 145px;
+                }
+
+                &_p {
+                    font-size: 13px;
+                    line-height: 16px;
+                    margin-left: 180px;
+                    margin-top: 35px;
+                }
+            }
+
+            &_bottom {
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 64px;
+
+                &_left {
+                    margin-bottom: 16px;
+                }
+
+                &_left,
+                &_right {
+                    width: auto;
+                    height: 220px;
+                    background-size:contain;
 
                     &_p {
                         font-size: 16px;
