--- a/style.css
+++ b/style.css
@@ -562,12 +562,14 @@ ul li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .project_block_bottom_left {
   height: 417px;
   width: 554px;
-  margin-right: 25px;
   background-image: url(img/project/background-bottom.png), url(img/project/background-bottom-1.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -593,16 +595,71 @@ ul li {
   color: #FFFFFF;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 1200px) and (max-width: 1320px) {
+  .project {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .project_block_bottom_right, .project_block_bottom_left {
+    width: 510px;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1199px) {
+  .project {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .project_block_bottom_right, .project_block_bottom_left {
+    width: 450px;
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+@media (min-width: 900px) and (max-width: 1023px) {
+  .project {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .project_h2 {
+    font-size: 33px;
+    line-height: 40px;
+  }
+  .project_p {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 35px;
+    width: 700px;
+  }
+  .project_block_top_p {
+    margin-top: 10%;
+    margin-left: 44%;
+    font-size: 28px;
+  }
+  .project_block_bottom_left, .project_block_bottom_right {
+    width: 400px;
+    height: 390px;
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 899px) {
   .center {
     padding-left: 5%;
-    padding-right: 0%;
+    padding-right: 3%;
+  }
+  .project {
+    margin-bottom: 30px;
+  }
+  .project_h2 {
+    margin-top: 30px;
   }
   .project_p {
     width: 520px;
   }
   .project_block_top {
-    width: 704px;
     height: 296px;
   }
   .project_block_top_p {
@@ -612,17 +669,20 @@ ul li {
     width: 235px;
     height: 302px;
   }
-  .project_block_bottom_left {
-    margin-right: 32px;
-  }
   .project_block_bottom_left, .project_block_bottom_right {
     width: 336px;
     height: 253px;
   }
 }
 
-@media (max-width: 376px) {
+@media (min-width: 425px) and (max-width: 767px) {
+  .center {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
   .project_h2 {
+    margin-top: 30px;
+    margin-bottom: 15px;
     font-weight: 300;
     font-size: 24px;
     line-height: 28px;
@@ -634,13 +694,14 @@ ul li {
     line-height: 26px;
     margin-bottom: 82px;
     width: 343px;
+    margin-bottom: 40px;
   }
   .project_block {
     width: 343px;
     height: 144px;
   }
   .project_block_top {
-    width: 343px;
+    width: auto;
     height: 144px;
     margin-bottom: 16px;
   }
@@ -649,9 +710,10 @@ ul li {
     height: 145px;
   }
   .project_block_top_p {
-    font-size: 16px;
-    line-height: 19px;
-    margin-left: 136px;
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 181px;
+    margin-top: 40px;
   }
   .project_block_bottom {
     display: -webkit-box;
@@ -667,8 +729,141 @@ ul li {
     margin-bottom: 16px;
   }
   .project_block_bottom_left, .project_block_bottom_right {
-    width: 343px;
+    width: auto;
     height: 255px;
+  }
+  .project_block_bottom_left_p, .project_block_bottom_right_p {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 424px) {
+  .center {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .project {
+    margin-bottom: 30px;
+  }
+  .project_h2 {
+    margin-top: 30px;
+    margin-bottom: 14px;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: #000000;
+  }
+  .project_p {
+    font-size: 14px;
+    line-height: 26px;
+    margin-bottom: 82px;
+    width: 343px;
+    margin-bottom: 40px;
+  }
+  .project_block {
+    width: 343px;
+    height: 144px;
+  }
+  .project_block_top {
+    width: auto;
+    height: 144px;
+    margin-bottom: 16px;
+  }
+  .project_block_top_img {
+    width: 150px;
+    height: 145px;
+  }
+  .project_block_top_p {
+    font-size: 16px;
+    line-height: 19px;
+    margin-left: 200px;
+    margin-top: 50px;
+  }
+  .project_block_bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 64px;
+  }
+  .project_block_bottom_left {
+    margin-bottom: 16px;
+  }
+  .project_block_bottom_left, .project_block_bottom_right {
+    width: auto;
+    height: 255px;
+  }
+  .project_block_bottom_left_p, .project_block_bottom_right_p {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 374px) {
+  .center {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+  .project {
+    margin-bottom: 30px;
+  }
+  .project_h2 {
+    margin-top: 30px;
+    margin-bottom: 14px;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    color: #000000;
+  }
+  .project_p {
+    font-size: 13px;
+    line-height: 22px;
+    margin-bottom: 82px;
+    width: 265px;
+    margin-bottom: 40px;
+  }
+  .project_block {
+    width: 343px;
+    height: 144px;
+  }
+  .project_block_top {
+    width: auto;
+    height: 144px;
+    margin-bottom: 16px;
+  }
+  .project_block_top_img {
+    width: 150px;
+    height: 145px;
+  }
+  .project_block_top_p {
+    font-size: 13px;
+    line-height: 16px;
+    margin-left: 180px;
+    margin-top: 35px;
+  }
+  .project_block_bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 64px;
+  }
+  .project_block_bottom_left {
+    margin-bottom: 16px;
+  }
+  .project_block_bottom_left, .project_block_bottom_right {
+    width: auto;
+    height: 220px;
+    background-size: contain;
   }
   .project_block_bottom_left_p, .project_block_bottom_right_p {
     font-size: 16px;
